# langgraph-introduction-workshop

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
notebooks/: 01_introduction_basic_graphs.ipynb  02_conditional_routing.ipynb  03_tool_integration.ipynb  04_persistence_memory.ipynb  05_multi_agent_orchestration.ipynb  06_langgraph_studio.ipynb
presentation/: LangGraph_Workshop.pptx  ~$LangGraph_Workshop.pptx
src/workshop/: __init__.py  agent_with_tools.py  chatbot.py  multi_agent_team.py  support_router.py
