[project]
name = "langgraph-introduction-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.4",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.6",
    "langgraph-api>=0.7.31",
    "langgraph-cli>=0.4.11",
    "langgraph-supervisor>=0.0.1",
    "langgraph-swarm>=0.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "tavily-python>=0.7.19",
]
